test/classes/errors/nilability-init-var/init-var-nonnil-shared-from-nonnil-borrowed.good
init-var-nonnil-shared-from-nonnil-borrowed.chpl:9: error: invalid copy-initialization
init-var-nonnil-shared-from-nonnil-borrowed.chpl:9: error: cannot initialize 'shared MyClass' from a 'borrowed MyClass'
